--- a/client/src/components/TaskForm.css
+++ b/client/src/components/TaskForm.css
@@ -2,9 +2,9 @@
   max-width: 400px;
   margin: 20px auto;
   padding: 20px;
-  background: linear-gradient(135deg, #4facfe, #00f2fe);
+  background: linear-gradient(135deg, #7cc2ff, #7af5fb);
   border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px rgba(237, 228, 228, 0.2);
   color: #fff;
   font-family: 'Arial', sans-serif;
 }
@@ -14,7 +14,7 @@
   text-align: center;
   margin-bottom: 20px;
   font-weight: bold;
-  color: #fff;
+  color: #000000;
 }
 
 .form-group {
@@ -35,7 +35,7 @@
 .form-select {
   width: 100%;
   height: 40px;
-  margin-left: -10px;
+  margin-left: -6px;
   border-radius: 5px;
   outline: none;
   font-size: 1rem;
@@ -63,7 +63,7 @@
 .form-input::placeholder, 
 .form-textarea::placeholder {
   color: #aaa;
-  font-style: italic;
+  /* font-style: italic; */
 }
 
 
